# a-gentle-introduction-to-cpp-type-erasure

./: .clang-tidy  CMakeLists.txt  README.md
Course/: .clang-tidy  CMakeLists.txt
Course/Section_0_-_Prerequisites/: CMakeLists.txt  README.md  prerequisite.cpp
Course/Section_1_-_Introduction/: README.md
Course/Section_2_-_External_Polymorphism/: CMakeLists.txt  README.md  external_polymorphism.cpp
Course/Section_2_-_External_Polymorphism/Subsection_1_-_Basics/: .gitignore  CMakeLists.txt  README.md  external_polymorphism.cpp
Course/Section_2_-_External_Polymorphism/Subsection_2_-_Arguments_and_Return_Values/: .gitignore  CMakeLists.txt  arguments_and_return_values.cpp
Course/Section_2_-_External_Polymorphism/Subsection_2_-_More_Complex/: CMakeLists.txt  README.md  more_complex.cpp
Course/Section_2_-_External_Polymorphism/Subsection_3_-_Templates/: CMakeLists.txt  README.md  templates  templates.cpp
Course/Section_2_-_External_Polymorphism/Subsection_4_-_Templated_Complete_External_Polymorphism/: .gitignore  CMakeLists.txt  README.md  templated_complete_external_polymorphism
Course/Section_2_-_External_Polymorphism/Subsection_5_-_Interface_Subset/: .gitignore  CMakeLists.txt  README.md  interface_subset  interface_subset.cpp
Course/Section_2_-_External_Polymorphism/Subsection_5_-_Interface_Subset_NAME_PENDING/: TODO.md  (+1 more)
Course/Section_3_-_Wrapping/: Animal.hpp  CMakeLists.txt  README.md  error.cpp  wrapped.cpp  wrapping.cpp  zoo.hpp
Course/Section_4_-_Next_Steps/: README.md
Course/Section_4_-_function/: README.md
cmake/: helpers.cmake
